--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('/img/fundo.jpg');
+    background-image: url('../img/fundo.jpg');
     background-size: cover;
     background-repeat: no repeat;
     color: #501511;
