--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ button {
     .edit-04,
     .edit-05 {
         background-color: #fdfdfd;
-        margin: 10px 0;
+        margin-bottom: 3px;
         border-radius: none;
     }
     .container-01,
@@ -226,7 +226,7 @@ button {
     }
 
     .ativo{
-        margin-top: 5px;
+        margin-bottom: 3px;
         background-color: #fdfdfd;
         
     }
