update padding media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,7 @@ button {
         display: flex;
         flex-direction: column;
         box-shadow: none;
+        padding: 10px;
     }
 
     .container-04,
