--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,7 @@ button {
         flex-direction: column;
         box-shadow: none;
         padding: 10px;
+        margin: 0;
     }
 
     .container-04,
