--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,8 @@ button {
 
     main,
     .edit-task {
+        margin: 0;
+        padding: 10px;
         display: flex;
         flex-direction: column;
         width: 96%;
